--- a/env/.env
+++ b/env/.env
@@ -37,6 +37,7 @@ export CRT_DIR=$PRV_DIR/certs
 export PWD_DIR=$PRV_DIR/auth
 export EDITOR="code --wait"
 export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
+export SOLARGRAPH_GLOBAL_CONFIG=$DOT_DIR/ruby/solargraph.yml
 
 # Secrets
 source $PRV_DIR/.env
