Update vscode settings

--- a/vscode/configs/settings.json
+++ b/vscode/configs/settings.json
@@ -32,7 +32,6 @@
     "crystal-lang.completion": true,
     "crystal-lang.hover": true,
     "crystal-lang.implementations": true,
-    "ruby.format": "standard",
     "rubyTestExplorer.logpanel": true,
     "rubyTestExplorer.minitestCommand": "rake",
     "rubyTestExplorer.minitestFilePattern": [
@@ -41,6 +40,9 @@
     ],
     "solargraph.commandPath": "/Users/ab_local/.rvm/gems/ruby-2.7.1/wrappers/solargraph",
     "solargraph.checkGemVersion": false,
+    "solargraph.autoformat": true,
+    "solargraph.diagnostics": true,
+    "solargraph.formatting": true,
     "diffEditor.maxComputationTime": 0,
     "diffEditor.ignoreTrimWhitespace": true,
     "window.zoomLevel": 1,
@@ -93,7 +95,8 @@
     "git.alwaysShowStagedChangesResourceGroup": true,
     "git.branchSortOrder": "alphabetically",
     "git.autoStash": true,
-    "gitlens.views.showRelativeDateMarkers": false,
+    "git.allowForcePush": true,
+    "git.enableStatusBarSync": false,
     "gitlens.hovers.annotations.details": false,
     "gitlens.hovers.currentLine.details": false,
     "gitlens.codeLens.recentChange.enabled": false,
@@ -107,8 +110,10 @@
         "overview"
     ],
     "gitlens.views.repositories.enabled": true,
+    "gitlens.views.repositories.compact": true,
     "gitlens.views.repositories.avatars": false,
     "gitlens.views.repositories.location": "gitlens",
+    "gitlens.views.repositories.showBranchComparison": false,
     "gitlens.views.compare.enabled": false,
     "gitlens.views.compare.avatars": false,
     "gitlens.views.search.location": "gitlens",
@@ -116,6 +121,11 @@
     "gitlens.views.search.files.layout": "tree",
     "gitlens.views.lineHistory.avatars": false,
     "gitlens.views.fileHistory.avatars": false,
+    "gitlens.views.commitDescriptionFormat": "",
+    "gitlens.views.stashDescriptionFormat": "${agoOrDate}",
+    "gitlens.views.showRelativeDateMarkers": false,
+    "gitlens.statusBar.command": "gitlens.revealCommitInView",
+    "gitlens.statusBar.format": "${author}, ${date}",
     "gitlens.hovers.enabled": true,
     "gitlens.hovers.avatars": false,
     "gitlens.codeLens.authors.enabled": false,
@@ -127,6 +137,7 @@
     "gitlens.defaultDateShortFormat": "dd.mm.yy",
     "gitlens.currentLine.format": "${author}, ${date} • ${message}",
     "gitlens.advanced.telemetry.enabled": false,
+    "gitlens.advanced.repositorySearchDepth": 3,
     "gitlens.gitCommands.closeOnFocusOut": true,
     "gitlens.mode.statusBar.enabled": false,
     "gitlab.instanceUrl": "https://gitlab.neopoly.de",
@@ -169,16 +180,10 @@
         "skyitalia",
         "skyitfantasy",
         "skyithub",
+        "solargraph",
+        "solargraph standardrb",
+        "standardrb",
         "sueddeutsche",
         "typecheck"
-    ],
-    "gitlens.statusBar.command": "gitlens.revealCommitInView",
-    "gitlens.statusBar.format": "${author}, ${date}",
-    "gitlens.views.commitDescriptionFormat": "",
-    "gitlens.views.stashDescriptionFormat": "${agoOrDate}",
-    "gitlens.views.repositories.showBranchComparison": false,
-    "gitlens.views.repositories.compact": true,
-    "gitlens.advanced.repositorySearchDepth": 3,
-    "git.allowForcePush": true,
-    "git.enableStatusBarSync": false
+    ]
 }
