--- a/env/.env
+++ b/env/.env
@@ -20,24 +20,27 @@ export GITHUB_EMAIL=$UNOFFICIAL_EMAIL
 
 # Development
 export HOST_IP=$(dig +short `hostname`)
+export NGINX_VERSION=1.19
 export NGINX_PORT=80
 export NGINX_SSL_PORT=443
+export MYSQL_VERSION=8.0
 export MYSQL_PORT=3306
 export MYSQL_HOST=mysql
+export SELENIUM_VERSION=4
 export SELENIUM_HOST=$HOST_IP
 export SELENIUM_PORT=4444
+export MEMCACHE_VERSION=1
 export MEMCACHE_HOST=$HOST_IP
 export MEMCACHE_PORT=11211
-export GRAFANA_PORT=3001
-export MATTERMOST_PORT=8065
 export DVL_DIR=$HOME/devel
 export DOT_DIR=$DVL_DIR/$GITHUB_NAME/dotfiles
-export PRV_DIR=$DVL_DIR/$GITHUB_NAME/private
+export PRV_DIR=$DOT_DIR/private
 export CRT_DIR=$PRV_DIR/certs
 export PWD_DIR=$PRV_DIR/auth
 export EDITOR="code --wait"
 export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
 export SOLARGRAPH_GLOBAL_CONFIG=$DOT_DIR/ruby/solargraph.yml
+export YARN_CACHE_FOLDER=$HOME/.cache/yarn
 
 # Secrets
 source $PRV_DIR/.env
