Update vscode settings

--- a/vscode/configs/settings.json
+++ b/vscode/configs/settings.json
@@ -1,13 +1,15 @@
 {
     "workbench.startupEditor": "none",
     "workbench.sideBar.location": "left",
-    "workbench.editor.enablePreview": false,
     "workbench.fontAliasing": "antialiased",
     "workbench.tree.indent": 14,
+    "workbench.tree.renderIndentGuides": "none",
+    "workbench.editor.enablePreview": false,
     "workbench.editor.enablePreviewFromQuickOpen": false,
     "workbench.editor.closeOnFileDelete": true,
     "workbench.editor.mouseBackForwardToNavigate": false,
-    "workbench.tree.renderIndentGuides": "none",
+    "workbench.list.automaticKeyboardNavigation": false,
+    "editor.columnSelection": false,
     "editor.fontSize": 14,
     "editor.fontFamily": "FiraCode-Light",
     "editor.fontLigatures": false,
@@ -32,6 +34,10 @@
     "crystal-lang.completion": true,
     "crystal-lang.hover": true,
     "crystal-lang.implementations": true,
+    "ruby.format": "standard",
+    "ruby.lint": {
+        "standard": true
+    },
     "rubyTestExplorer.logpanel": true,
     "rubyTestExplorer.minitestCommand": "rake",
     "rubyTestExplorer.minitestFilePattern": [
@@ -40,16 +46,14 @@
     ],
     "solargraph.commandPath": "/Users/ab_local/.rvm/gems/ruby-2.7.1/wrappers/solargraph",
     "solargraph.checkGemVersion": false,
-    "solargraph.autoformat": true,
     "solargraph.diagnostics": true,
-    "solargraph.formatting": true,
     "diffEditor.maxComputationTime": 0,
     "diffEditor.ignoreTrimWhitespace": true,
     "window.zoomLevel": 1,
     "window.newWindowDimensions": "inherit",
+    "explorer.autoReveal": false,
     "explorer.confirmDelete": true,
     "explorer.compactFolders": false,
-    "explorer.autoReveal": true,
     "explorer.confirmDragAndDrop": false,
     "terminal.integrated.fontSize": 13,
     "terminal.integrated.shell.osx": "/bin/zsh",
@@ -97,6 +101,8 @@
     "git.autoStash": true,
     "git.allowForcePush": true,
     "git.enableStatusBarSync": false,
+    "gitlab.showIssueLinkOnStatusBar": false,
+    "gitlab.showMrStatusOnStatusBar": false,
     "gitlens.hovers.annotations.details": false,
     "gitlens.hovers.currentLine.details": false,
     "gitlens.codeLens.recentChange.enabled": false,
@@ -141,13 +147,13 @@
     "gitlens.gitCommands.closeOnFocusOut": true,
     "gitlens.mode.statusBar.enabled": false,
     "gitlab.instanceUrl": "https://gitlab.neopoly.de",
-    "gitlab.showPipelineUpdateNotifications": true,
     "projectManager.git.baseFolders": [
         "Users/ab_local/devel"
     ],
     "projectManager.any.maxDepthRecursion": 0,
     "projectManager.git.maxDepthRecursion": 0,
     "projectManager.groupList": true,
+    "remote.SSH.lockfilesInTmp": true,
     "remote.SSH.configFile": "/Users/ab_local/.ssh/config",
     "remote.SSH.showLoginTerminal": true,
     "sftp.debug": true,
@@ -160,6 +166,7 @@
     "npm.autoDetect": "off",
     "testExplorer.addToEditorContextMenu": true,
     "svgviewer.enableautopreview": true,
+    "path-intellisense.showHiddenFiles": true,
     "breadcrumbs.enabled": false,
     "cSpell.userWords": [
         "centos",
