--- a/vscode/configs/settings.json
+++ b/vscode/configs/settings.json
@@ -34,17 +34,19 @@
     "crystal-lang.completion": true,
     "crystal-lang.hover": true,
     "crystal-lang.implementations": true,
-    "ruby.format": "standard",
-    "ruby.lint": {
-        "standard": true
-    },
+    "ruby.pathToBundler": "/Users/ab_local/Development/.vendor/rbenv/shims/bundle",
+    "ruby.useBundler": true,
+    "ruby.interpreter.commandPath": "/Users/ab_local/Development/.vendor/rbenv/shims/ruby",
     "rubyTestExplorer.logpanel": true,
     "rubyTestExplorer.minitestCommand": "rake",
     "rubyTestExplorer.minitestFilePattern": [
         "*_test.rb",
         "*_spec.rb"
     ],
-    "solargraph.commandPath": "/Users/ab_local/.rvm/gems/ruby-2.7.1/wrappers/solargraph",
+    "solargraph.autoformat": true,
+    "solargraph.formatting": true,
+    "solargraph.bundlerPath": "/Users/ab_local/Development/.vendor/rbenv/shims/bundle",
+    "solargraph.commandPath": "/Users/ab_local/Development/.vendor/rbenv/shims/solargraph",
     "solargraph.checkGemVersion": false,
     "solargraph.diagnostics": true,
     "diffEditor.maxComputationTime": 0,
@@ -70,31 +72,6 @@
     "terminals.showCommands": true,
     "logViewer.showStatusBarItemOnChange": true,
     "logViewer.logLevel": "debug",
-    "logViewer.watch": [
-        "var/log/delayed.log",
-        "var/log/faktory.log",
-        "var/log/queued_jobs_*.log",
-        "var/log/memcached.log",
-        "var/log/nginx.log",
-        "var/log/ranking.log",
-        "var/log/manager_desk.*.log",
-        "var/log/manager_rails.*.log",
-        "var/log/shared_lineups.*.log",
-        "var/log/manager_rails_webpack.log",
-        "var/log/match_stats_import.log",
-        "var/log/player_withdrawals.log",
-        "var/log/player_statistics.log",
-        "var/log/player_scoring.log",
-        "var/log/user_scoring.log",
-        "var/log/news.log",
-        "var/log/profanities.log",
-        "ui/manager_rails/log/test.log",
-        "ui/manager_rails/log/development.log",
-        "ui/manager_rails/log/production.log",
-        "ui/manager_desk/log/test.log",
-        "ui/manager_desk/log/development.log",
-        "ui/manager_desk/log/production.log",
-    ],
     "git.fetchOnPull": true,
     "git.alwaysShowStagedChangesResourceGroup": true,
     "git.branchSortOrder": "alphabetically",
@@ -148,7 +125,7 @@
     "gitlens.mode.statusBar.enabled": false,
     "gitlab.instanceUrl": "https://gitlab.neopoly.de",
     "projectManager.git.baseFolders": [
-        "Users/ab_local/devel"
+        "Users/ab_local/Development/"
     ],
     "projectManager.any.maxDepthRecursion": 0,
     "projectManager.git.maxDepthRecursion": 0,
@@ -168,29 +145,9 @@
     "svgviewer.enableautopreview": true,
     "path-intellisense.showHiddenFiles": true,
     "breadcrumbs.enabled": false,
-    "cSpell.userWords": [
-        "centos",
-        "crystallang",
-        "devel",
-        "dflfantasy",
-        "faktory",
-        "gemfile",
-        "gigya",
-        "neopoly",
-        "rakefile",
-        "rakelib",
-        "rubocop",
-        "sdadvent",
-        "sddrive",
-        "sdiqtest",
-        "sdquiz",
-        "skyitalia",
-        "skyitfantasy",
-        "skyithub",
-        "solargraph",
-        "solargraph standardrb",
-        "standardrb",
-        "sueddeutsche",
-        "typecheck"
-    ]
+    "search.exclude": {
+        "**/.git/": true,
+        "**/log": true,
+        "**/tmp": true
+    }
 }
