--- a/env/.env
+++ b/env/.env
@@ -1,46 +1,70 @@
-# Shell
-export LC_ALL=en_US.UTF-8
-export SAVEHIST=50000
-export HISTSIZE=20000
-
-# Personal
+# Personal:
 export REAL_NAME="Andreas Busold"
 export NICK_NAME=shluboto
 export OFFICIAL_EMAIL=andreas.busold@gmail.com
 export UNOFFICIAL_EMAIL=$NICK_NAME@gmail.com
 
-# Work
-export NEO_PROJECTS=sdquiz,dflfantasy
+# Neopoly:
 export NEO_NAME=ab
 export NEO_EMAIL=ab@neopoly.de
 
-# Github
+# Github:
 export GITHUB_NAME=$NICK_NAME
 export GITHUB_EMAIL=$UNOFFICIAL_EMAIL
 
-# Development
-export HOST_IP=$(dig +short `hostname`)
+# Directories:
+export DEVEL_DIR=$HOME/Development
+export DEVEL_CACHE_DIR=$DEVEL_DIR/.cache
+export GLOBAL_CACHE_DIR=$HOME/.cache
+export DOT_DIR=$DEVEL_DIR/$GITHUB_NAME/dotfiles
+export LOG_DIR=$DEVEL_DIR/.log
+export TMP_DIR=$DEVEL_DIR/.tmp
+export VENDOR_DIR=$DEVEL_DIR/.vendor
+
+# Shell:
+export LC_ALL=en_US.UTF-8
+export HISTFILE=$GLOBAL_CACHE_DIR/.zhistory
+export SAVEHIST=50000
+export HISTSIZE=20000
+
+# System:
+export EDITOR="code --wait"
+export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
+
+# Ruby:
+export RUBY_VERSION=ruby-2.7.1
+export RBENV_ROOT=$VENDOR_DIR/rbenv
+export RBENV_SHELL=zsh
+export GEMRC=$DOT_DIR/private/.gemrc
+export GEM_SPEC_CACHE=$DEVEL_CACHE_DIR/.cache/gem_spec
+export SOLARGRAPH_GLOBAL_CONFIG=$DOT_DIR/ruby/solargraph.yml
+
+# Bundler:
+export BUNDLE_GEM__TEST=minitest
+export BUNDLE_GEM__MIT=false
+export BUNDLE_GEM__COC=false
+export BUNDLE_BUILD__LIBV8="--with-system-v8"
+export BUNDLE_BUILD__NOKOGIRI="--use-system-libraries"
+export BUNDLE_BUILD__THERUBYRACER="--with-v8-dir=/usr/local/opt/v8@3.15"
+
+# Javascript:
+export NODE_ENV=development
+export NVM_DIR=$VENDOR_DIR/nvm
+export YARN_CACHE_FOLDER=$DEVEL_CACHE/yarn
+
+# Nginx:
 export NGINX_VERSION=1.19
 export NGINX_PORT=80
 export NGINX_SSL_PORT=443
-export MYSQL_VERSION=8.0
+export CRT_DIR=$DOT_DIR/private/certs
+export PWD_DIR=$DOT_DIR/private/auth
+
+# MySql:
 export MYSQL_PORT=3306
 export MYSQL_HOST=mysql
-export SELENIUM_VERSION=4
-export SELENIUM_HOST=$HOST_IP
-export SELENIUM_PORT=4444
-export MEMCACHE_VERSION=1
-export MEMCACHE_HOST=$HOST_IP
-export MEMCACHE_PORT=11211
-export DVL_DIR=$HOME/devel
-export DOT_DIR=$DVL_DIR/$GITHUB_NAME/dotfiles
-export PRV_DIR=$DOT_DIR/private
-export CRT_DIR=$PRV_DIR/certs
-export PWD_DIR=$PRV_DIR/auth
-export EDITOR="code --wait"
-export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
-export SOLARGRAPH_GLOBAL_CONFIG=$DOT_DIR/ruby/solargraph.yml
-export YARN_CACHE_FOLDER=$HOME/.cache/yarn
+export MYSQL_USER=root
 
-# Secrets
-source $PRV_DIR/.env
+# Docker:
+export MEMCACHE_VERSION=1
+export MYSQL_VERSION=8.0
+export SELENIUM_VERSION=4
