--- a/env/.env
+++ b/env/.env
@@ -17,6 +17,7 @@ export DEVEL_DIR=$HOME/Development
 export DEVEL_CACHE_DIR=$DEVEL_DIR/.cache
 export GLOBAL_CACHE_DIR=$HOME/.cache
 export DOT_DIR=$DEVEL_DIR/$GITHUB_NAME/dotfiles
+export PRV_DIR=$DEVEL_DIR/$GITHUB_NAME/private
 export LOG_DIR=$DEVEL_DIR/.log
 export TMP_DIR=$DEVEL_DIR/.tmp
 export VENDOR_DIR=$DEVEL_DIR/.vendor
@@ -32,32 +33,34 @@ export EDITOR="code --wait"
 export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
 
 # Ruby:
-export RUBY_VERSION=ruby-2.7.1
 export RBENV_ROOT=$VENDOR_DIR/rbenv
 export RBENV_SHELL=zsh
-export GEMRC=$DOT_DIR/private/.gemrc
-export GEM_SPEC_CACHE=$DEVEL_CACHE_DIR/.cache/gem_spec
-export SOLARGRAPH_GLOBAL_CONFIG=$DOT_DIR/ruby/solargraph.yml
+export GEMRC=$PRV_DIR/.gemrc
+export GEM_SPEC_CACHE=$DEVEL_CACHE_DIR/gem_spec
+export SOLARGRAPH_GLOBAL_CONFIG=$DOT_DIR/ruby/.solargraph.yml
+export SOLARGRAPH_CACHE=$DEVEL_CACHE_DIR/solargraph
 
 # Bundler:
+export BUNDLE_CACHE_PATH=$DEVEL_CACHE_DIR/bundler
 export BUNDLE_GEM__TEST=minitest
 export BUNDLE_GEM__MIT=false
 export BUNDLE_GEM__COC=false
 export BUNDLE_BUILD__LIBV8="--with-system-v8"
 export BUNDLE_BUILD__NOKOGIRI="--use-system-libraries"
 export BUNDLE_BUILD__THERUBYRACER="--with-v8-dir=/usr/local/opt/v8@3.15"
+export BUNDLE_BUILD__PUMA="--with-cflags=-Wno-error=implicit-function-declaration"
 
 # Javascript:
 export NODE_ENV=development
-export NVM_DIR=$VENDOR_DIR/nvm
-export YARN_CACHE_FOLDER=$DEVEL_CACHE/yarn
+export NVM_DIR=$(brew --prefix nvm)
+export YARN_CACHE_FOLDER=$DEVEL_CACHE_DIR/yarn
 
 # Nginx:
 export NGINX_VERSION=1.19
 export NGINX_PORT=80
 export NGINX_SSL_PORT=443
-export CRT_DIR=$DOT_DIR/private/certs
-export PWD_DIR=$DOT_DIR/private/auth
+export CRT_DIR=$PRV_DIR/certs
+export PWD_DIR=$PRV_DIR/auth
 
 # MySql:
 export MYSQL_PORT=3306
