--- a/env/.env
+++ b/env/.env
@@ -69,5 +69,7 @@ export MYSQL_USER=root
 
 # Docker:
 export MEMCACHE_VERSION=1
+export MEMCACHE_PORT=11211
 export MYSQL_VERSION=8.0
+export SELENIUM_PORT=4444
 export SELENIUM_VERSION=4
