Update vs code settings

--- a/vscode/configs/settings.json
+++ b/vscode/configs/settings.json
@@ -1,7 +1,6 @@
 {
     "workbench.startupEditor": "none",
     "workbench.sideBar.location": "left",
-    "workbench.fontAliasing": "antialiased",
     "workbench.tree.indent": 14,
     "workbench.tree.renderIndentGuides": "none",
     "workbench.editor.enablePreview": false,
@@ -10,10 +9,8 @@
     "workbench.editor.mouseBackForwardToNavigate": false,
     "workbench.list.automaticKeyboardNavigation": false,
     "editor.columnSelection": false,
-    "editor.fontSize": 14,
     "editor.fontFamily": "FiraCode-Light",
     "editor.fontLigatures": false,
-    "editor.fontWeight": "300",
     "editor.renderIndentGuides": true,
     "editor.renderControlCharacters": true,
     "editor.renderLineHighlight": "none",
@@ -43,28 +40,14 @@
     "solargraph.checkGemVersion": false,
     "diffEditor.maxComputationTime": 0,
     "diffEditor.ignoreTrimWhitespace": true,
-    "window.zoomLevel": 1,
     "window.newWindowDimensions": "inherit",
     "explorer.autoReveal": false,
     "explorer.confirmDelete": true,
     "explorer.compactFolders": false,
     "explorer.confirmDragAndDrop": false,
-    "terminal.integrated.fontSize": 13,
-    "terminal.integrated.shell.osx": "/bin/zsh",
-    "terminal.integrated.lineHeight": 1.4,
-    "terminal.integrated.cursorBlinking": true,
-    "terminal.integrated.cursorStyle": "underline",
-    "terminal.integrated.automationShell.linux": "",
-    "terminal.integrated.confirmOnExit": true,
-    "terminal.integrated.drawBoldTextInBrightColors": false,
-    "terminal.integrated.experimentalUseTitleEvent": true,
-    "terminal.integrated.scrollback": 2000,
-    "terminal.integrated.macOptionClickForcesSelection": true,
-    "terminal.explorerKind": "external",
     "terminals.showCommands": true,
     "logViewer.showStatusBarItemOnChange": true,
     "logViewer.logLevel": "debug",
-    "git.fetchOnPull": true,
     "git.alwaysShowStagedChangesResourceGroup": true,
     "git.branchSortOrder": "alphabetically",
     "git.autoStash": true,
@@ -135,7 +118,6 @@
     "testExplorer.addToEditorContextMenu": true,
     "svgviewer.enableautopreview": true,
     "path-intellisense.showHiddenFiles": true,
-    "breadcrumbs.enabled": false,
     "search.exclude": {
         "**/.git/": true,
         "**/log": true,
@@ -146,5 +128,25 @@
     "ruby.format": "rufo",
     "vscode-mysql.resultTheme": "Default",
     "gitlens.views.fileHistory.location": "scm",
-    "gitlens.views.lineHistory.location": "scm"
+    "gitlens.views.lineHistory.location": "scm",
+    "breadcrumbs.enabled": true,
+    "window.restoreFullscreen": true,
+    "window.nativeTabs": true,
+    "window.titleBarStyle": "native",
+    "window.zoomLevel": 2,
+    "workbench.activityBar.visible": true,
+    "workbench.editor.closeEmptyGroups": false,
+    "workbench.statusBar.visible": false,
+    "diffEditor.renderSideBySide": false,
+    "editor.renderWhitespace": "all",
+    "workbench.fontAliasing": "antialiased",
+    "git.fetchOnPull": true,
+    "terminal.integrated.fontSize": 10,
+    "terminal.integrated.lineHeight": 1.4,
+    "terminal.integrated.cursorStyle": "underline",
+    "debug.console.fontSize": 10,
+    "markdown.preview.fontSize": 12,
+    "[Log]": {
+        "editor.fontSize": 10
+    }
 }
