--- a/env/.env
+++ b/env/.env
@@ -14,17 +14,12 @@ export GITHUB_EMAIL=$UNOFFICIAL_EMAIL
 
 # Directories:
 export DEVEL_DIR=$HOME/Development
-export DEVEL_CACHE_DIR=$DEVEL_DIR/.cache
-export GLOBAL_CACHE_DIR=$HOME/.cache
 export DOT_DIR=$DEVEL_DIR/$GITHUB_NAME/dotfiles
 export PRV_DIR=$DEVEL_DIR/$GITHUB_NAME/private
-export LOG_DIR=$DEVEL_DIR/.log
-export TMP_DIR=$DEVEL_DIR/.tmp
-export VENDOR_DIR=$DEVEL_DIR/.vendor
 
 # Shell:
 export LC_ALL=en_US.UTF-8
-export HISTFILE=$GLOBAL_CACHE_DIR/.zhistory
+export HISTFILE=$DOT_DIR/zsh/.zhistory
 export SAVEHIST=50000
 export HISTSIZE=20000
 
@@ -33,15 +28,12 @@ export EDITOR="code --wait"
 export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
 
 # Ruby:
-export RBENV_ROOT=$VENDOR_DIR/rbenv
+export RBENV_ROOT=$HOME/.rbenv
 export RBENV_SHELL=zsh
 export GEMRC=$PRV_DIR/.gemrc
-export GEM_SPEC_CACHE=$DEVEL_CACHE_DIR/gem_spec
 export SOLARGRAPH_GLOBAL_CONFIG=$DOT_DIR/ruby/.solargraph.yml
-export SOLARGRAPH_CACHE=$DEVEL_CACHE_DIR/solargraph
 
 # Bundler:
-export BUNDLE_CACHE_PATH=$DEVEL_CACHE_DIR/bundler
 export BUNDLE_GEM__TEST=minitest
 export BUNDLE_GEM__MIT=false
 export BUNDLE_GEM__COC=false
@@ -52,11 +44,8 @@ export BUNDLE_BUILD__PUMA="--with-cflags=-Wno-error=implicit-function-declaratio
 
 # Javascript:
 export NODE_ENV=development
-export NVM_DIR=$(brew --prefix nvm)
-export YARN_CACHE_FOLDER=$DEVEL_CACHE_DIR/yarn
 
 # Nginx:
-export NGINX_VERSION=1.19
 export NGINX_PORT=80
 export NGINX_SSL_PORT=443
 export CRT_DIR=$PRV_DIR/certs
@@ -68,6 +57,7 @@ export MYSQL_HOST=mysql
 export MYSQL_USER=root
 
 # Docker:
+export NGINX_VERSION=1.19
 export MEMCACHE_VERSION=1
 export MEMCACHE_PORT=11211
 export MYSQL_VERSION=8.0
